# sign-language

./: .gitignore  README.md  cli.py  main.py  pyproject.toml  requirements.txt
1past/: detector.py
CNN_model/: __init__.py  config.py  data_loader.py  evaluate.py  inference.py  model.py  pipeline.py  train.py  utils.py
CNN_model/Final_iteration/: best_model.pth  inference.py  label_encoder.pkl  pipeline_replace_letters.py  pyproject.toml  train.py
CNN_model/Final_super_last_nuclearversion_mega_hyper_iteration/: config.py  data_augmentation.py  data_gathering.py  dataset_creation.py  inference.py  label_encoder.pkl  models.py  train.py
CNN_model/Second_iteration/: best_model.pth  confusion_matrix.npy  inference.py  main.py  model.py  train.py
LSTM_model/: config.py  model.py  train.py  webcam_test.py
archive_old/: app_new.js  app_old.js  index_old.html  placeholder.css  placeholder.html  routes_new.py  routes_old.py  temporary.py
archive_old/1past/: test_entry.py
archive_old/iteration_1/: README.md  requirements.txt
archive_old/iteration_1/LSTM_model/: __init__.py  inference.py
data_collect/: __init__.py  record_landmarks.py
data_collect/ngt_custom/: H_landmarks.npy  P_landmarks.npy  T_landmarks.npy  W_landmarks.npy
dataset_builder/: __init__.py  augment_landmarks.py  frankenstein_builder.py  merge_custom_letters.py
frontend/: app.css  app.js  index.html  placeholder.js
iteration_1/src/: cli.py
models/dynamic/: best_model.pth
models/static/: best_model.pth
src/: cli.py  cli_new.py  record_landmarks.py
src/assets/letter_gifs/: README.txt
src/backend/: detector.py
src/backend/api/: __init__.py  routes.py  schemas.py
src/backend/core/: __init__.py  config.py  (+3 more)
src/ngt_custom/: H_landmarks.npy  P_landmarks.npy  T_landmarks.npy  W_landmarks.npy
(+14 files in other folders)
