[project]
name = "sign-language"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "fastdtw",
    "matplotlib",
    "mediapipe",
    "numpy",
    "opencv-python",
    "pandas",
    "scikit-learn",
    "torch",
    "torchvision",
]
