[project]
name = "sign-language"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "fastdtw",
    "matplotlib",
    "mediapipe==0.10.14",
    "numpy",
    "opencv-python",
    "pandas",
    "scikit-learn",
    "torch",
    "torchvision",
    "tqdm>=4.67.1",
]
