[project]
name = "sign-language"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "fastdtw",
    "matplotlib",
    "mediapipe==0.10.14",
    "numpy",
    "opencv-python",
    "pandas",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "scikit-learn",
    "torch",
    "torchvision",
    "tqdm",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]
